@@ -105,7 +105,7 @@ public class PatternsSimpleVisitorTest {
 
         StringWriter out = new StringWriter();
         JavacTask ct = (JavacTask) tool.getTask(out, null, noErrors,
-            List.of("--enable-preview", "-source", Integer.toString(Runtime.version().feature())), null,
+            null, null,
             Arrays.asList(new MyFileObject(code)));
         return ct.parse().iterator().next();
     }
